arc: Use a 32-byte handshake

This change uses mojo::edk::GenerateRandomToken() to generate the token,
since it produces a 32-byte string.

BUG=848214
TEST=ARC starts again

Change-Id: Ie468718edc1b8f43b66dc8edd1863a71a1c5597b
Reviewed-on: https://chromium-review.googlesource.com/1080006
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Luis Hector Chavez <lhchavez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563212}
Former-commit-id: 289fe393b405bbfd5669a4bb67167ebe14e33ca3